--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -23,7 +23,7 @@ header {
     width: 100vw;
     background-color: rgb(106, 0, 48);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0 20px;
 }
@@ -35,6 +35,8 @@ header {
 header img {
     width: auto;
     height: 45px;
+    margin-right: 400px;
+    margin-left: 530px;
 }
 
 .topnav input[type=text] {
@@ -44,12 +46,6 @@ header img {
     border-radius: 30px;
     width: 75%;
 }
-
-/* @media screen and (max-width: 992px){
-}
-
-@media screen and (max-width: 768px){
-} */
 
 
 /* Sidebar */
@@ -61,6 +57,7 @@ header img {
     background: rgb(134, 22, 80);
     left: -200px;
     transition: 0.5s;
+    z-index: 3;
 }
 
 #sidebar.active {
@@ -303,7 +300,7 @@ footer {
     display: block;
     margin-top: 190px;
     height: 180px;
-    background-color: rgb(66, 0, 53);
+    background-color: rgb(106, 0, 48);
     border: 1px solid black;
     border-left: 0cap;
     border-right: 0cap;
@@ -352,6 +349,318 @@ footer p {
     text-decoration: underline;
     color: white;
 }
+
+/* Guides */
+
+:root {
+    --griditem_bgc: rgb(237, 237, 229);
+    --griditem_border: 1px solid black;
+    --griditem_bgshadow: 4px 4px rgb(61, 61, 61);
+}
+
+.guides-grid-container {
+    height: 650px;
+    padding: 15px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+}
+
+.guides-item {
+    border: var(--griditem_border);
+    background-color: var(--griditem_bgc);
+    box-shadow: var(--griditem_bgshadow);
+    height: 400px;
+}
+
+.guides-griditem-header {
+    display: grid;
+    width: 100%;
+}
+
+.guides-griditem-header h1 { 
+    background-color: rgb(250, 254, 255);
+    padding: 20px;
+    font-size: 32px;
+    border-bottom: 1px solid black;
+}
+
+
+.guides-griditem-header h1:hover {
+    text-decoration: underline;
+}
+
+.guides-griditem-description {
+    padding: 15px;
+    font-size: 25px;
+    width: 500px;
+}
+
+.guides-griditem-description p {
+    background-color: rgba(145, 0, 89, 0.7);
+    color: #fff;
+    padding: 10px;
+}
+
+#guides1-griditem1 {
+    background-image: url(/CSS/images/knife.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#guides1-griditem2 {
+    background-image: url(/CSS/images/produce.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#guides1-griditem3 {
+    background-image: url(/CSS/images/meat.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#guides1-griditem4 {
+    background-image: url(/CSS/images/salt.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* Recipes */
+
+.recipes-container-grid { 
+    height: 1400px;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+
+#recipes-griditem1 {
+    background: url(/CSS/images/cake.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem2 {
+    background: url(/CSS/images/burger.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem3 {
+    background: url(/CSS/images/pizza.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem4 {
+    background: url(/CSS/images/salad2.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem5 {
+    background: url(/CSS/images/spritz.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem6 {
+    background: url(images/salmonrice.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem7 {
+    background: url(images/Dish7.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem8 {
+    background: url(images/Dish2.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem9 {
+    background: url(images/Dish3.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem10 {
+    background: url(images/Dish4.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem11 {
+    background: url(images/Dish5.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#recipes-griditem12 {
+    background: url(images/Dish6.jpg);
+    background-size: 400px 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.recipes-item {
+    padding: 10px;
+    background-color: #8a1751;
+    color: rgb(255, 255, 255);
+    margin-top: 10px;
+    height: 350px;
+    box-shadow: 4px 4px rgb(61, 61, 61);
+    overflow: hidden;
+}
+
+.recipes-item a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.recipes-item a h1:hover {
+    text-decoration: underline;
+    color: rgb(255, 255, 255);
+}
+
+.recipes-item h1 {
+    background-color: rgba(145, 0, 89, 0.6);
+    padding: 10px;
+    font-size: 25px;
+}
+
+/* Ingredients Page */
+
+
+
+.ingredients-list {
+    width: 90vw;
+    height: 750px;
+}
+
+.ingredients-list h1 {
+    display: inline-block;
+    margin: 10px 15px;
+    padding: 10px;
+    border: 1px solid black;
+    background-color: #8a1751;
+    color: white;
+
+}
+
+.ingredients-list li {
+    border: 1px solid rgb(0, 0, 0);
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 5px;
+    list-style-type: none;
+    font-size: 30px;
+    display: inline-block;
+}
+
+.ingredients-list li {
+    transition: background-color 0.5s ease, color 0.5s ease, text-decoration 0.5s ease;
+    color: rgb(0, 0, 0);
+}
+
+.ingredients-list li:hover {
+    background: radial-gradient(circle, rgba(173,0,81,1) 33%, rgba(255,203,0,1) 100%);
+    color: #fff; 
+    text-decoration: none; 
+    text-decoration: underline;
+
+}
+
+.ingredients-list ul {
+    margin: 10px
+}
+
+/* In Season */
+
+:root {
+    --season-font-color: white;
+}
+
+.inseason-flex-container {
+    display: flex;
+    height: 400px;
+    flex-direction: row;
+}
+
+.inseason-box {
+    width: 25%;
+    height: 600px;
+    width: 50px;
+    position: relative;
+    z-index: 1;
+}
+
+.inseason-box h1 {
+    text-align: center;
+    padding: 20px;
+    position: absolute; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.inseason-box h1:hover{
+    text-decoration: underline;
+}
+
+.inseason-box:hover{
+    transform: scale(1.03);
+    transition: 0.5s ease;
+    z-index: 2; 
+}
+
+#spring-box {
+    width: 25%;
+    background: rgb(173,0,81);
+    background: radial-gradient(circle, rgb(2, 96, 5) 33%, rgb(80, 183, 49) 100%); 
+    color: var(--season-font-color);
+}
+
+#summer-box {
+    width: 25%;
+    background: rgb(173,0,81);
+    background: radial-gradient(circle, rgba(173,0,81,1) 33%, rgba(255,203,0,1) 100%);     color: var(--season-font-color);
+}
+
+#fall-box {
+    width: 25%;
+    background: rgb(173,0,81);
+    background: radial-gradient(circle, rgb(139, 51, 0) 33%, rgb(164, 137, 31) 100%);     color: var(--season-font-color);
+}
+#winter-box {
+    width: 25%;
+    background: rgb(173,0,81);
+    background: radial-gradient(circle, rgb(2, 58, 202) 33%, rgb(0, 204, 255) 100%); 
+    color: var(--season-font-color);
+}
+
 
 @media screen and (max-width: 992px){
     .topnav{
